Fix javadocs, strongly typed collections, final method and parameter modifiers, @Override annotations, organize imports, StringBuffer -> StringBuilder, Iterator -> for